상품 검색 초기 구현